--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "typescript": "~5.2.2"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.468.0",
     "aws-cdk-lib": "2.101.1",
     "constructs": "^10.0.0",
     "source-map-support": "^0.5.21"
